--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-/node_modules
+node_modules/
+.gitignore
+.elasticbeanstalk/
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
